Fixed menu items behavior (active / hover) on mobile

--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -197,7 +197,7 @@ section {
       display: inline-block;
       height: 100%;
       width: 100%;
-      padding-left: 5px;
+      padding-left: 10px;
       transition: border-width 0.5s; }
     .nav > li > a:hover {
       border-bottom: 2px solid #74d5e8; }
@@ -807,30 +807,22 @@ textarea {
     font-family: fira_sansbook; }
 
   .nav {
-    box-sizing: content-box;
-    display: inline-block;
     list-style: none;
-    width: 100%; }
+    color: #fff; }
     .nav > li {
+      color: #1C667A;
+      text-align: center;
       position: relative;
-      width: 100%;
-      height: 60px;
-      border-radius: 0;
-      color: #fff;
-      text-align: left; }
-
-  .nav_items {
-    padding: 20px 15px 20px 15px;
-    text-align: center;
-    position: relative;
-    left: 0;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    border-radius: 0;
-    color: #58697a; }
-    .nav_items:hover {
-      border: 0; }
+      padding: 15px 10px 0 10px;
+      height: 40px;
+      width: 100%; }
+      .nav > li > a {
+        position: relative;
+        display: inline-block;
+        width: 100%;
+        padding-left: 0; }
+      .nav > li > a:hover {
+        border-bottom: 0; }
 
   .contact_bar {
     display: none !important; }
