--- a/dev/scss/base/mobile.scss
+++ b/dev/scss/base/mobile.scss
@@ -16,32 +16,26 @@
   }
 
   .nav {
-    box-sizing: content-box;
-    display: inline-block;
     list-style: none;
-    width: 100%;
-    & > li {
-      position: relative;
-      width: 100%;
-      height: 60px;
-      border-radius: 0;
-      color: #fff;
-      text-align: left;
-    }
-  }
-  .nav_items {
-    padding: 20px 15px 20px 15px;
-    text-align: center;
-    position: relative;
-    left: 0;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    border-radius: 0;
-    color: $font_color_2;
+    color: #fff;
 
-    &:hover {
-      border: 0;
+    & > li {
+      color: #1C667A;
+      text-align: center;
+      position: relative;
+      padding: 15px 10px 0 10px;
+      height: 40px;
+      width: 100%;
+
+      & > a {
+        position: relative;
+        display: inline-block;
+        width: 100%;
+        padding-left:0;
+      }
+      & > a:hover {
+        border-bottom: 0;
+      }
     }
   }
 
