--- a/dev/scss/base/style.scss
+++ b/dev/scss/base/style.scss
@@ -224,7 +224,7 @@ border-radius: 5px;
       display: inline-block;
       height: 100%;
       width: 100%;
-      padding-left: 5px;
+      padding-left: 10px;
       transition: border-width 0.5s;
 
     }
